# riogisoffline

./: .gitignore  .qgis-plugin-ci  Dockerfile  README.md  __init__.py  compile.bat  metadata.txt  pyproject.toml
.github/workflows/: main.yml  publish_plugin.yml  pypi_publish.yml  test_plugin.yml
dialog/: riogis_dialog_base.ui  riogis_dockwidget.ui
plugin/: azure_blob_storage_connection.py  dependency_installer.py  refresh_map.py  riogis.py  riogis_dialog.py  riogis_dockedwidget.py  settings_dialog.py  syncronizer.py  user_settings_generator.py  utils.py
riogisoffline/: Makefile  README.md  __init__.py  metadata.txt  pb_tool.cfg  requirements.txt  resources.qrc  resources_rc.py  riogis_metadata.json  settings.json
riogisoffline/dialog/: riogis_dialog_change_project_status.ui  riogis_dialog_change_status.ui  riogis_dialog_export.ui  riogis_dialog_settings.ui  riogis_dialog_upload.ui  riogis_dockwidget.ui
riogisoffline/plugin/: __init__.py  azure_blob_storage_connection.py  change_project_status_dialog.py  change_status_dialog.py  dependency_installer.py  export_dialog.py  multi_thread_job.py  refresh_map.py  resources.py  riogis.py  riogis_dockedwidget.py  search_box.py  settings_dialog.py  syncronizer.py  upload_dialog.py  user_settings_generator.py  utils.py  worker.py
test_riogisoffline/: mock_extension.py  requirements.test.txt  test_riogis.py  test_utils.py
