[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "riogisoffline"
description = "This Exports attributes of a given feature to a Wincan consumable text file."
authors = [
  { name = "Vann- og avløpsetaten Oslo kommune", email = "gis@vav.oslo.kommune.no" },
]
license = { file = "riogisoffline/LICENSE" }
readme = "riogisoffline/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
version = "0.0.22"

[project.urls]
"Homepage" = "https://github.com/vavpp/riogisoffline"
"Issues" = "https://github.com/vavpp/riogisoffline/issues"
